# gha-issue-triage

./: CHANGELOG.md  README.md  action.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: codeql.yml  lint-md-links.yml
docs/: integrations.md
src/: labels.py
tests/: test_labels.py
